<resources>
    <string name="app_name">Films</string>
    <string name="favorites">Favorites</string>
    <string name="add_film">Add film</string>
    <string name="add_film_to_favorites">Add film to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="login">Login</string>
    <string name="login_field">Login:</string>
    <string name="password_field">Password:</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="search_films">Search films</string>
    <string name="search">Search:</string>
    <string name="search_button">Search</string>
    <string name="full_title">Full Title:</string>
    <string name="year">Year:</string>
    <string name="plot">Plot:</string>
    <string name="genres">Genres:</string>
</resources>